--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
 body {
 	background-color: lightblue;
+	border-color: purple;
+	border-width: 2px;
+	border-style: solid;
+	border-radius: 10px;
+	font-family: inconsolata, monospace;
 }
+
