--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,16 @@ body {
 	font-family: inconsolata, monospace;
 }
 
+.button  {
+	font-size: 14px;
+	border-radius: 6px;
+	background-color: green;
+	color: black;
+	border: 2px solid limegreen;
+	padding: 10px;
+	width: 100px;
+}
+
+.button:hover {
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
