--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,12 @@ body {
 	border-radius: 6px;
 	background-color: green;
 	color: black;
-	border: 2px solid limegreen;
+	border: 2px solid black;
 	padding: 10px;
 	width: 100px;
 }
 
 .button:hover {
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+	background-color: limegreen;
 }
