--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
 body {
-	background-color: blue;
+	background-color: #2d6c80;
 }
 
 .textbox {
-	background-color: lightblue;
-	border-color: purple;
+	background-color: #20786b;
+	border-color: #b58aff;
 	border-width: 2px;
 	border-style: solid;
 	border-radius: 10px;
@@ -23,5 +23,5 @@ body {
 
 .button:hover {
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-	background-color: limegreen;
+	background-color: #6acc7c;
 }
