--- a/alex_projects/styles1.css
+++ b/alex_projects/styles1.css
@@ -8,6 +8,7 @@
 .main {
 	width: 960px;
 	margin: auto;
+	display: table;
 }
 
 /* Settings */
@@ -41,6 +42,7 @@ h1 {
 
 #location-bar {
 	margin-left: 32px;
+	margin-bottom: 25px;
 	float: left;
 	width: 675px;
 	height: 150px;
@@ -70,31 +72,32 @@ h1 {
 
 .game {
 	background-color: #3C5757;
-	margin-top: 25px;
 	border-radius: 8px;
 	position: relative;
-	float: left
 }
 
 #sidebar-container {
 	width: 250px;
 	height: auto;
+	float: left;
 }
 
 #sidebar {
 	width: 250px;
-	height: 300px;
-
+	height: 100px;
+	margin-bottom: 25px;
 }
 
-#content {
-	margin-left: 32px;
-	width: 675px;
-	height: 620px;
-	background-color: #3C5757;
-	margin-top: 25px;
-	border-radius: 8px;
-	position: relative;
-	float: middle;
+#sidebar2 {
+	width: 250px;
+	height: 400px;
+	margin-bottom: 25px;
+}
 
+#story {
+	margin-left: 282px;
+	width: 675px;
+	height: 650px;
+	margin-top: 25px;
+	float: middle;
 }
