--- a/interstellar/styles1.css
+++ b/interstellar/styles1.css
@@ -24,13 +24,13 @@ width: 960px;
 margin: auto;
 font-family: arial;
 background-color: #A5ABBB;
+color: rgb(218, 239, 227);
 }
 
 .wrapper {
 display: grid;
 grid-template-columns: 285px 675px;
 grid-template-rows: 175px auto;
-background-color: #fff;
 }
 
 *{
@@ -52,7 +52,6 @@ background-color: #fff;
 	margin-top: 60px;
 	text-align: center;
 	text-shadow: rgba(0, 0, 0, 0.8) 0px 0px 8px;
-	color: rgb(218, 239, 227);
 }
 
 #location-bar {
@@ -96,6 +95,12 @@ background-color: #fff;
 }
 
 /* Storylet */
+.storylet {
+	display: grid;
+	grid-template-columns: 135px 500px;
+	grid-template-rows: auto;
+}
+
 #imgcontainer {
 	padding: 8px;
 	border-radius: 10px 0 10px 0;
