--- a/interstellar/styles1.css
+++ b/interstellar/styles1.css
@@ -18,6 +18,11 @@ h1 {
 	font-weight:bold;
 }
 
+h2 {
+	font-size: 1.2em;
+	font-weight:bold;
+}
+
 /* Grid Layout */
 body {
 width: 960px;
@@ -114,16 +119,55 @@ grid-template-rows: 175px auto;
 
 /* Branch */
 
-.branch {
+.branch-top {
 	display: grid;
-	grid-template-columns: 
+	grid-template-columns: 52px 560px;
+	grid-template-rows: auto;
+}
+
+.branch-margin {
+	margin-bottom: 9px;
+}
+
+.branch-divider {
+	border-top-color: rgb(177, 197, 201);
+	border-top-style: dashed;
+	border-top-width: 1px;
+	margin: 10px 0;
+}
+
+.branch-footer {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: auto;
 }
 
 #branch {
-	margin-top: 15px;
+	margin: 15px 0;
 	padding: 10px;
 	background-color:rgba(188,218,218,0.35);
 	width: 615px;
-	height: 125px;
+	height: auto;
 	border-radius: 10px 10px 10px 10px;
+}
+
+/* Button */
+
+.button-container {
+    text-align: right;
+    display: block;
+}
+.button {
+	background-color: #CFE5E8;
+	border-radius: 3px;
+	color: #000000;
+	border: 1px solid #355959;
+	box-shadow: inset 0 0 2px #355959;
+	text-transform: uppercase;
+	font-size: 0.9em;
+	font-weight: bold;
+	height: 25px;
+	padding: 0 10px;
+	line-height: 25px;
+	position: relative;
 }
